--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <input name="robot" type="checkbox" required><br> <br>
             </div>
                 <input type="reset">
-                <a href="www.youtube.com">
+                <a href="Vdolce2.html">
                     <input type="submit">
                 </a>
         </form>
