--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Aby otrzymać swoje V-dolce musisz wprowadzić parę informacji</p>
         <br> 
         <div id="div">
-            <form action="Vdolce2.html">
+            <form method="GET" action="Vdolce2.html">
                 <label>Imię</label>
                 <input name="imie" type="text" placeholder="Janusz" minlength="3" maxlength="15" required> <br>
                 <label>Nazwisko</label>
