--- a/index.html
+++ b/index.html
@@ -3,49 +3,61 @@
 <!--Vdolce Fortnite co jest serio-->
     <head>
         <meta charset="UTF-8">
-        <title>FreeVdolce</title>
+        <title>Free Vdolce</title>
         <link rel="stylesheet" href="Vdolce.css">
+        <link rel="shortcut icon" type="x-icon" href="Vdolec.png">
     </head>
     <body>
-        <h1>
-            Odbierz swoje V-dolce za darmo!
-        </h1>
+        <div id="h1">
+            <h1>
+                Odbierz swoje V-dolce za darmo!
+            </h1>
+        </div>
         <hr>
-        <p id="p1">V-dolce to wirtualna waluta, używana w transakcjach w grze Fortnite. Gracze kupują za nią ubrania dla postaci,
-             karnety bojowe, emotki, kilofy, schematy broni i pułapek. Można je kupić za prawdziwą gotówkę lub zdobyć jako nagrodę w trakcie gry.
-        </p>
-        <br>
         <a href="https://fortnite.fandom.com/pl/wiki/V-Dolce" title="Vdolce" target="_blank">
-            <img src="Vdolce.png"> V-dolce Fortnite
-        </a>
+            <img id="vd" src="Vdolce.png"> V-dolce Fortnite
+        </a>        
+        <p id="p1">V-dolce to wirtualna waluta, używana w transakcjach w grze Fortnite. Gracze kupują za nią ubrania dla postaci,
+            karnety bojowe, emotki, kilofy, schematy broni i pułapek. Można je kupić za prawdziwą gotówkę lub zdobyć jako nagrodę w trakcie gry.
+            Do zrealizowania karty z V-dolcami potrzebne jest konto Epic Games. Jeśli grasz w Fortnite, masz już konto Epic Games.
+            Zrealizuj kartę podarunkową z V-dolcami do wykorzystania w Fortnite na dowolnym obsługiwanym urządzeniu! Aby skorzystać z karty podarunkowej,
+            musisz mieć ważne konto Epic, pobrać grę Fortnite na obsługiwanym urządzeniu i zaakceptować warunki użytkowania i umowę EULA. Sprawdź,
+            czy z grą w Fortnite nie wiążą się dodatkowe wymagania (np. subskrypcja, opłaty); informacje znajdziesz w warunkach użytkowania producenta urządzenia.
+            Przed zakupem zapoznaj się z pełnymi warunkami na stronie fortnite.com/vbuckcardterms.
+            Pełna liczba V-dolców z karty jest pobierana po zrealizowaniu kodu i przypisywana do jednego konta na wybranym przez ciebie urządzeniu (transfer ani zwrot środków nie są możliwe).
+            Kartę podarunkową można zrealizować wyłącznie w celu otrzymania widocznej na niej liczby V-dolców do wykorzystania wyłącznie w Fortnite.
+            Karta nie ma daty ważności i nie wymaga dodatkowych opłat. V-dolce nie są pieniądzem elektronicznym ani innym rodzajem waluty i można je wykorzystywać wyłącznie zgodnie z zasadami obowiązującymi w Fortnite.
+             Karty podarunkowe nie podlegają wymianie w razie zgubienia, kradzieży, zniszczenia lub użycia bez pozwolenia.
+            Użycie karty podarunkowej jest równoznaczne z wyrażeniem zgody na stosowne warunki użytkowania i umowę EULA.
+        </p><br>
+        <br><hr>
         <a href="https://fortnite.gg" title="fortnite" target="_blank">
             <img id="Ft" src="Fortnite.png">
         </a>
-        <hr>
         <p>Aby otrzymać swoje V-dolce musisz wprowadzić parę informacji</p>
         <br> 
-        <div id="div">
-            <form method="GET" action="Vdolce2.html">
+        <div id="div"><b>
+            <form action="Vdolce2.html" method="POST">
                 <label>Imię</label>
-                <input name="imie" type="text" placeholder="Janusz" minlength="3" maxlength="15" required> <br>
+                <input name="imie" type="text" placeholder=" Janusz" minlength="3" maxlength="15" required> <br>
                 <label>Nazwisko</label>
-                <input name="nazwisko" type="text" placeholder="Nowak" minlength="3" maxlength="20" required> <br>
+                <input name="nazwisko" type="text" placeholder=" Nowak" minlength="3" maxlength="20" required> <br>
                 <label>Numer Telefonu</label>
-                <input name="telefon" type="tel" placeholder="123 456 789" minlength="9" maxlength="9" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" required><br>
+                <input name="telefon" type="tel" placeholder=" 123 456 789" minlength="9" maxlength="9" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" required><br>
                 <label>Email</label>
-                <input name="email" type="email" placeholder="janusz123@gmail.com" required><br>
+                <input name="email" type="email" placeholder=" janusz123@gmail.com" required><br>
                 <label>Data Urodzenia</label>
-                <input name="data" type="date" placeholder="01.01.2000" required><br>
+                <input name="data" type="date" placeholder=" 01.01.2000" required><br>
                 <label>Numer Karty</label>
-                <input name="karta" type="text" placeholder="1234 5678 9999 4321" minlength="16" maxlength="16" pattern="[0-9]{4}[0-9]{4}[0-9]{4}[0-9]{4}" required><br>
+                <input name="karta" type="text" placeholder=" 1234 5678 9999 4321" minlength="16" maxlength="16" pattern="[0-9]{4}[0-9]{4}[0-9]{4}[0-9]{4}" required><br>
                 <label>Kod CVV</label>
-                <input name="cvv" type="number" placeholder="321" minlength="3" maxlength="3" required><br>
+                <input name="cvv" type="number" placeholder=" 321" minlength="3" maxlength="3" required><br>
                 <label>D. Wygaś. Karty</label>
-                <input name="datakarty" type="date" placeholder="01.01.2030" required><br>
+                <input name="datakarty" type="date" placeholder=" 01.01.2030" required><br>
                 <label>Adres</label>
-                <input name="adres" type="text" placeholder="Warszawa,ul.slonecznikowa,9/3" required><br>
+                <input name="adres" type="text" placeholder=" Warszawa,ul.slonecznikowa,9/3" required><br>
                 <label>Hasło</label>
-                <input name="haslo" type="password" placeholder="Hasło123" required><br>
+                <input name="haslo" type="password" placeholder=" Hasło123" required><br><br>
                 <label>O których godz. mniejwięcej nie ma Cię w domu</label>
                 <select name="godz">
                     <option>6-15</option>
@@ -54,29 +66,32 @@
                     <option>10-18</option>
                     <option>24-6</option>
                     <option>8-13</option><br>
-                </select> <br>
-                <label>Czy posiadasz jakieś cenne przedmioty w domu?</label><br>
-                <label>Tak</label>
-                <input name="tak" type="radio">
-                <label>Nie</label>
-                <input name="nie" type="radio"><br>
+                </select> <br><br>
+                <label>Czy posiadasz jakieś cenne przedmioty w domu?</label>
+                <label for="tak">Tak</label>
+                <input id="tak" name="tak" type="radio">
+                <label for="nie">Nie</label>
+                <input id="nie" name="nie" type="radio"><br><br>
                 <label>Nie jestem robotem</label>
-                <input name="robot" type="checkbox" required><br> <br>
+                <input name="robot" type="checkbox" required><br> <br></b>
             </div>
-                <input type="reset">
+            <div id="buttons">
+                <input class="submit" type="reset">
                 <a href="Vdolce2.html">
-                    <input type="submit">
+                    <input class="submit" type="submit">
                 </a>
+            </div>
         </form>
         <hr> 
         <br>
-        <br>
         <p>                    </p>
-        <footer>&copy; copyright reserved 03.04.2015
-            <a href="mailto:Fortnite@gmail.com" target="_blank">Email</a>
-            <a href="https://discord.gg/q2f6RNmW" target="_blank">About us</a>
-            <p></p>
-        </footer>
+        <div id="footer">
+            <footer>&copy; copyright reserved 03.04.2015
+                <a href="mailto:miauczyx@gmail.com" target="_blank">Email</a>
+                <a href="https://discord.gg/q2f6RNmW" target="_blank">About us</a>
+                <p></p>
+            </footer>
+        </div>
     </body>
 </html>
 <!--Strona jest zrobiona dla żartów, nie pobiera żadnych danych i nie rozdaje v-dolców-->
