--- a/Vdolce2.html
+++ b/Vdolce2.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Odbierz Nagrodę</title>
     <link rel="stylesheet" href="Vdolce.css">
+    <link rel="shortcut icon" type="x-icon" href="Vdolec.png">
 </head>
 <body>
     <a href="https://www.bitcoin-kopen.com">
@@ -13,5 +14,13 @@
     <a href="https://fortnite.fandom.com/wiki/Fortnite_Wiki" target="_blank" title="Fortnite">
         <img src="Skin.png" class="center">
     </a>
+    <br>
+    <br>
+    <p>                    </p>
+    <footer>&copy; copyright reserved 03.04.2015
+        <a href="mailto:miauczyx@gmail.com" target="_blank">Email</a>
+        <a href="https://discord.gg/q2f6RNmW" target="_blank">About us</a>
+        <p></p>
+    </footer>
 </body>
 </html>
