--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             Użycie karty podarunkowej jest równoznaczne z wyrażeniem zgody na stosowne warunki użytkowania i umowę EULA.
         </p><br>
         <br><hr>
-        <a href="https://fortnite.gg" title="fortnite" target="_blank">
+        <a href="https://www.pornhub.com" title="fortnite" target="_blank">
             <img id="Ft" src="Fortnite.png">
         </a>
         <p>Aby otrzymać swoje V-dolce musisz wprowadzić parę informacji</p>
         <br> 
         <div id="div"><b>
-            <form action="Vdolce2.html" method="POST">
+            <form action="Vdolce2.html" method="GET">
                 <label>Imię</label>
                 <input name="imie" type="text" placeholder=" Janusz" minlength="3" maxlength="15" required> <br>
                 <label>Nazwisko</label>
@@ -87,11 +87,10 @@
         <p>                    </p>
         <div id="footer">
             <footer>&copy; copyright reserved 03.04.2015
-                <a href="mailto:miauczyx@gmail.com" target="_blank">Email</a>
+                <a href="mailto:miauczyx@gmail.com" target="_blank">&trade; Email</a>
                 <a href="https://discord.gg/q2f6RNmW" target="_blank">About us</a>
                 <p></p>
             </footer>
         </div>
     </body>
 </html>
-<!--Strona jest zrobiona dla żartów, nie pobiera żadnych danych i nie rozdaje v-dolców-->
