--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Pełna liczba V-dolców z karty jest pobierana po zrealizowaniu kodu i przypisywana do jednego konta<br>na wybranym przez ciebie urządzeniu (transfer ani zwrot środków nie są możliwe).
             Kartę podarunkową można zrealizować wyłącznie w celu otrzymania widocznej na niej liczby V-dolców do wykorzystania wyłącznie w Fortnite.
             Karta nie ma daty ważności i nie wymaga dodatkowych opłat. V-dolce nie są pieniądzem elektronicznym ani innym rodzajem waluty i można je wykorzystywać wyłącznie zgodnie z zasadami obowiązującymi w Fortnite.
-            Karty podarunkowe nie podlegają wymianie w razie zgubienia,<br>kradzieży, zniszczenia lub użycia bez pozwolenia.
+            Karty podarunkowe nie podlegają wymianie w razie zgubienia,<br>kradzieży, zniszczenia lub użycia bez pozwolenia. miauczyx
             Użycie karty podarunkowej jest równoznaczne z wyrażeniem zgody na stosowne warunki użytkowania i umowę EULA.
         </p><br>
         <br><hr>
