--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Użycie karty podarunkowej jest równoznaczne z wyrażeniem zgody na stosowne warunki użytkowania i umowę EULA.
         </p><br>
         <br><hr>
-        <a href="https://www.pornhub.com" title="fortnite" target="_blank">
+        <a href="https://fortnite.gg" title="fortnite" target="_blank">
             <img id="Ft" src="Fortnite.png">
         </a>
         <p>Aby otrzymać swoje V-dolce musisz wprowadzić parę informacji</p>
@@ -86,7 +86,8 @@
                     <option disabled selected value> Wybierz opcję </option>
                     <option>Mężczyzna</option>
                     <option disabled>Sigma</option>
-                    <option>Kobieta</option><br>
+                    <option>Kobieta</option>
+                </select><br>
                 <label>Kod Pocztowy</label>
                 <input name="poczta" type="text" placeholder=" 57-200" pattern="^\d{2}-\d{3}$" required> <br>
                 <label>Wiek</label>
