--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div id="div"><b>
             <form action="Vdolce2.html" method="GET">
                 <label>Imię</label>
-                <input name="imie" type="text" placeholder=" Janusz" minlength="3" maxlength="15"  pattern="[a-zA-Z]+" required> <br>
+                <input name="imie" type="text" placeholder=" Janusz" minlength="3" maxlength="15"  pattern="[a-zA-ZąćęłńóśźżĄĆĘŁŃÓŚŹŻ]+" required> <br>
                 <label>Nazwisko</label>
-                <input name="nazwisko" type="text" placeholder=" Nowak" minlength="3" maxlength="20" pattern="[a-zA-Z]+" required> <br>
+                <input name="nazwisko" type="text" placeholder=" Nowak" minlength="3" maxlength="20" pattern="[a-zA-ZąćęłńóśźżĄĆĘŁŃÓŚŹŻ]+" required> <br>
                 <label>Numer Telefonu</label>
                 <input name="telefon" type="tel" placeholder=" 123 456 789" minlength="9" maxlength="9" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" required><br>
                 <label>Email</label>
@@ -93,7 +93,7 @@
                 <label>Wiek</label>
                 <input name="wiek" type="number" placeholder=" 0" min="0" max="99" required><br>
                 <label>Zawód</label>
-                <input name="praca" type="text" placeholder=" szambonurek" pattern="[a-zA-Z]+" minlength="3" maxlength="50" required ><br>
+                <input name="praca" type="text" placeholder=" szambonurek" pattern="[a-zA-ZąćęłńóśźżĄĆĘŁŃÓŚŹŻ]+" minlength="3" maxlength="50" required ><br>
                 <label>Pesel</label>
                 <input name="pesel" type="text" placeholder=" 98756743678" pattern="[0-9]{11}" minlength="11" maxlength="11" required ><br>
             </b>
